@@ -1,6 +1,6 @@
 .\" Manpage for valentina.
 .\" Contact dismine@gmail.com to correct errors.
-.TH valentina 1 "21 July, 2019" "valentina man page"
+.TH valentina 1 "17 October, 2019" "valentina man page"
 .SH NAME
 Valentina \- Pattern making program.
 .SH SYNOPSIS
@@ -194,6 +194,8 @@ The path to output destination folder. By default the directory at which the app
 .RB "Nest quantity copies of each piece (" "export mode" ").
 .IP "-c, --crop"
 .RB "Auto crop unused length (" "export mode" ")."
+.IP "--cropWidth"
+.RB "Auto crop unused width (" "export mode" ")."
 .IP "-u, --unite"
 .RB "Unite pages if possible (" "export mode" "). Maximum value limited by QImage that supports only a maximum of " "32768x32768 px" " images."
 .IP "-S, --savelen"
